fixing tertiary button padding for `column`, `image-variants` and `overlapping-content` blocks (#402)

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -38,6 +38,7 @@
   background-color: unset;
   color: var(--tertiary);
   justify-content: flex-start;
+  padding: 0;
 }
 
 .columns a.button.primary.video-link::after {
