--- a/blocks/image-variants/image-variants.css
+++ b/blocks/image-variants/image-variants.css
@@ -7,6 +7,7 @@
   background-color: unset;
   color: var(--tertiary);
   justify-content: flex-start;
+  padding: 0;
 }
 
 .section.image-variants-container a.button.tertiary::after {
