--- a/blocks/overlapping-content/overlapping-content.css
+++ b/blocks/overlapping-content/overlapping-content.css
@@ -16,6 +16,7 @@
 
 .overlapping-content a.button.tertiary {
   background-color: unset;
+  padding: 0;
 }
 
 .overlapping-content > div.crop > {
